--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -35,6 +35,8 @@ jobs:
       - name: Run script
         run: |
           sh test.sh
+          rm -fr iptv.*
+          rm -fr iptv.*.*
           ls
         
       - name: commit 
@@ -52,6 +54,7 @@ jobs:
         uses: svenstaro/upload-release-action@v2
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
+          file: "./userbouquet.greekstreamtv.tv"
           title: "Release: $tag"
           tag: 'tv'
           required: true
